--- a/contrib/apparmor/Vagrantfile
+++ b/contrib/apparmor/Vagrantfile
@@ -24,6 +24,14 @@ Vagrant.configure(2) do |config|
   chown -R #{user} /home/#{user}/.ssh
   echo \"#{user} ALL=(ALL) NOPASSWD:ALL\" > /etc/sudoers.d/#{user}
 
+  # Chef is just boring
+  apt-get remove --purge -y chef
+
+  # Just like puppet
+  apt-get remove --purge -y puppet
+
+  apt-get autoremove
+
 SCRIPT
   # The most common configuration options are documented and commented below.
   # For a complete reference, please see the online documentation at
